--- a/style.css
+++ b/style.css
@@ -3,13 +3,82 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Seravek', sans-serif;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    color: #333;
     background-color: #f9f9f9;
     line-height: 1.6;
+}
+
+
+.scroll-to-top {
+    position: fixed;
+    bottom: 90px;
+    right: 20px;
+    background-color: #ffffff;
+    color: #007bff;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+}
+
+.bottom-panel {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #007bff;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+}
+
+.bottom-panel .wallet-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.bottom-panel .recharge-button {
+    background-color: white;
+    color: #007bff;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.bottom-panel .recharge-button:hover {
+    background-color: #0056b3;
+    color: white;
+}
+
+@media (max-width: 600px) {
+    .bottom-panel {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px;
+    }
+
+    .bottom-panel .wallet-info {
+        margin-bottom: 10px;
+    }
+
+    .bottom-panel .recharge-button {
+        align-self: stretch;
+        text-align: center;
+    }
 }
 
 /* Navbar */
@@ -17,20 +86,20 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
-    background-color: #2c3e50;
+    padding: .5rem;
+    background-color: #0056b3;
     color: white;
 }
 
 .navbar .logo {
     font-size: 1.5rem;
     font-weight: bold;
+    margin-right: 1rem;
 }
 
 .nav-links {
     list-style: none;
     display: flex;
-    gap: 1rem;
 }
 
 .nav-links a {
@@ -38,6 +107,7 @@ body {
     color: white;
     font-weight: 500;
     transition: color 0.3s;
+
 }
 
 .nav-links a:hover {
@@ -61,7 +131,7 @@ body {
 
 /* Hero Section */
 .hero {
-    background-color: #34495e;
+    background-color: #0056b3;
     color: white;
     text-align: center;
     padding: 2rem;
@@ -189,7 +259,7 @@ body {
 
 .card h3 {
     margin-bottom: 0.5rem;
-    color: #2c3e50;
+    color: #0056b3;
 }
 
 /* Trending Table */
@@ -206,7 +276,7 @@ body {
 }
 
 .trending-table th {
-    background-color: #2c3e50;
+    background-color: #0056b3;
     color: white;
 }
 
