--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 body {
     background-color: #f9f9f9;
     line-height: 1.6;
+    margin-bottom: 100px;
 }
 
 
@@ -79,6 +80,27 @@ body {
         align-self: stretch;
         text-align: center;
     }
+}
+
+#popup-module {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.popup-content {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 /* Navbar */
