--- a/style.css
+++ b/style.css
@@ -111,6 +111,11 @@ body {
     padding: .5rem;
     background-color: #0056b3;
     color: white;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    margin-bottom: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, .5);
+
 }
 
 .navbar .logo {
@@ -153,6 +158,8 @@ body {
 
 /* Hero Section */
 .hero {
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
     background-color: #0056b3;
     color: white;
     text-align: center;
@@ -179,7 +186,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: -3rem;
-    margin: 75px 0 100px 0;
+    margin: 75px 0 150px 0;
     position: relative;
     transform: rotateX(30deg);
 }
