--- a/style.css
+++ b/style.css
@@ -164,10 +164,12 @@ body {
 .hero-content h1 {
     font-size: 2.5rem;
     margin-bottom: 1rem;
+    line-height: 1.25;
 }
 
 .hero-content p {
     margin-bottom: 1.5rem;
+    line-height: 1.25;
 }
 
 .hero-content button {
@@ -266,23 +268,48 @@ body {
 }
 
 .card {
-    background-color: #ecf0f1;
-    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    background-color: #f9f9f9;
     border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     text-align: center;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s;
+    height: 100%;
 }
 
 .card img {
-    max-width: 100%;
-    border-radius: 5px;
-    margin-bottom: 1rem;
+    width: 150px;
+    object-fit: cover;
+    margin-bottom: 10px;
 }
 
+.card h3, .card p {
+    line-height: 1.15;
+
+}
 .card h3 {
-    margin-bottom: 0.5rem;
-    color: #0056b3;
+    font-size: 1.2rem;
+    margin: 10px 0;
+}
+
+.card p {
+    font-size: 1rem;
+    margin: 10px 0;
+}
+
+.buy-button {
+    background-color: #1abc9c;
+    color: white;
+    border: none;
+    padding: 5px 15px;
+    margin-top: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    width: 100%;
 }
 
 /* Trending Table */
