--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@
 body {
     background-color: #f9f9f9;
     line-height: 1.6;
-    padding-bottom: 120px;
+    padding-bottom: 150px;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 .scroll-to-top {
