--- a/style.css
+++ b/style.css
@@ -452,6 +452,7 @@ footer {
     }
 
     .bottom-panel {
+        position: fixed;
         flex-direction: column;
         align-items: flex-start;
     }
