--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
     background-color: #f9f9f9;
     line-height: 1.6;
-    padding-bottom: 120px;
+    padding-bottom: 130px;
     height: 100%;
     overflow-x: hidden;
 }
@@ -43,7 +43,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
     z-index: 1000;
 }
 
@@ -453,6 +453,8 @@ footer {
 
     .bottom-panel {
         position: fixed;
+        bottom: 0;
+        left: 0;
         flex-direction: column;
         align-items: flex-start;
     }
