--- a/style.css
+++ b/style.css
@@ -10,26 +10,24 @@ body {
     background-color: #f9f9f9;
     line-height: 1.6;
     padding-bottom: 130px;
-    height: 100%;
-    overflow-x: hidden;
 }
 
 .scroll-to-top {
-    /*position: fixed;*/
-    /*bottom: 105px;*/
-    /*right: 20px;*/
-    /*background-color: #ffffff;*/
-    /*color: #007bff;*/
-    /*border: none;*/
-    /*border-radius: 50%;*/
-    /*width: 50px;*/
-    /*height: 50px;*/
-    /*display: none;*/
-    /*justify-content: center;*/
-    /*align-items: center;*/
-    /*cursor: pointer;*/
-    /*box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);*/
-    /*z-index: 1000;*/
+    position: fixed;
+    bottom: 105px;
+    right: 20px;
+    background-color: #ffffff;
+    color: #007bff;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
 }
 
 .bottom-panel {
