--- a/style.css
+++ b/style.css
@@ -271,11 +271,59 @@ body {
 .card h3 {
     font-size: 1.2rem;
     margin: 10px 0;
+    text-transform: capitalize;
+
 }
 
 .card p {
     font-size: 1rem;
     margin: 10px 0;
+}
+
+.card-overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 10px;
+    text-align: left;
+    z-index: 10;
+    box-sizing: border-box;
+    border-radius: 0 0 20px 20px;
+}
+
+.card-overlay h3 {
+    margin: 0;
+    font-size: 16px;
+}
+
+.card-overlay p {
+    margin: 5px 0 0;
+    font-size: 14px;
+}
+
+.nft-details-panel {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    display: none;
+}
+
+.panel-content {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 500px;
+    text-align: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 .buy-button {
@@ -308,51 +356,59 @@ body {
     color: white;
 }
 
-.slider {
+.slider-container {
     position: relative;
     width: 100%;
-    max-width: 600px;
+    max-width: 800px;
     margin: 1rem auto;
     overflow: hidden;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.35);
 }
 
 .slider-track {
     display: flex;
     transition: transform 0.5s ease-in-out;
-    width: 100%;
 }
 
-.slider img {
-    width: 100%;
+.slider-item {
     flex: 0 0 100%;
-    padding: 15px;
-    border-radius: 20px;
+    max-width: 100%;
+    position: relative;
+    overflow: hidden;
+    box-sizing: border-box;
 }
 
-.slider-buttons {
-    position: absolute;
-    top: 50%;
+.slider-card {
+    position: relative;
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    transform: translateY(-50%);
+    height: auto;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
-.slider-buttons button {
-    background-color: rgba(0, 0, 0, 0.5);
+.slider-card h3{
+    text-transform: capitalize;
+}
+
+.slider-card img {
+    display: block;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.slider-card-overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
     color: white;
-    border: none;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s;
+    padding: 10px;
+    text-align: left;
+    z-index: 10;
 }
 
-.slider-buttons button:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-}
 
 /* Categories Section */
 .categories {
