--- a/style.css
+++ b/style.css
@@ -86,15 +86,28 @@ body {
 }
 
 /* Navbar */
+
+.logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 10px;
+}
+
+.my-nfts {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 10px;
+}
+
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: .5rem;
+    padding: 1rem;
     background-color: #007bff;
     color: white;
-    margin-bottom: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, .5);
 }
 
 .navbar .logo {
@@ -106,6 +119,7 @@ body {
 .nav-links {
     list-style: none;
     display: flex;
+    margin: 40px 10px 0 0;
 }
 
 .nav-links a {
@@ -113,11 +127,14 @@ body {
     color: white;
     font-weight: 500;
     transition: color 0.3s;
-
+    background-color: rgba(51, 51, 51, 0);
+    padding: 10px 14px;
 }
 
-.nav-links a:hover {
-    color: #1abc9c;
+.nav-links a:focus {
+    background-color: #333333;
+    border-radius: 10px;
+    padding: 10px 14px;
 }
 
 .cta {
@@ -475,7 +492,6 @@ footer {
 
     .nav-links {
         flex-wrap: wrap;
-        gap: 1rem;
         justify-content: center;
     }
 
